# CS122-Project

./: .gitignore  README.md  blinds.py  cards.py  constructors  engine.py  game.py  legacy_setup.py  pyproject.toml  requirements.txt  setup.py  test_game.py  ui_cli.py  ui_gui.py  utils.py  whale_save.json
pylatro/: __init__.py  jokers.py  scoring.py  shop.py  test_game.py  ui_gui.py
whale/: main.py  whale_save.json
whale/assets/: README.md
whale/config/: angles.py  constants.py  edges.py  hands.py
whale/core/: dice.py  game_state.py  run_state.py  save.py  scoring.py  shop.py
whale/ui/: layout.py  views.py
