[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whale"
version = "0.1.0"
authors = [
  { name="Aekn Admal", email="aekn.admal@gmail.com" },
  { name="Huy Tran", email="huytran8392@gmail.com" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
  "arcade>=3,<4"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
